@@ -1,6 +1,8 @@
 0.9.1
 - Deprecate captest
 - If file system based capabilities, drop setpcap
+- In cap-audit, fully resolve paths before classifying
+- In cap-audit, add JSON escaping to output
 
 0.9
 - Fix python path when invoking py-compile (Jan Palus)
